recursion.logo.koch.Koch.scala.error
Compilation error:
Koch:12: error: '(' expected but identifier found.
  if levels !=0{  
     ^Koch:24: error: illegal start of simple expression
} 
^